src/pages/obstetric/Obstetric.scss
.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
  z-index: 999;
  pointer-events: auto;
}

.tab-focus {
  position: absolute;
  background-color: white;
  padding: 10px 20px;
  border: 1px solid black;
  border-radius: 15px;
  z-index: 1001;
  display: flex;
  gap: 10px;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
  font-size: 16px;
  font-weight: 500;
  top: 100%;
  left: 35%;

  @media only screen and (min-width: 1200px) {
    left: 25%;
  }
}

.tour-container {
  position: absolute;
  background: #fff;
  border: 1px solid black;
  padding: 20px;
  border-radius: 17px;
  z-index: 1001;
  width: 420px;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
  top: 124%;
  left: 32%;

  @media only screen and (min-width: 1200px) {
    left: 22.5%;
  }
}

.tour-button {
  margin-top: 10px;
  background-color: black;
  color: white;
  border: none;
  padding: 8px 12px;
  border-radius: 8px;
  cursor: pointer;
  width: 100%;
  height: 39px;
}

